--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.6.0",
+    "react-popper": "^2.2.5",
+    "reactstrap": "^8.9.0"
   }
 }
